# gif-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  REUSE.toml  apply-clang-format.sh  config.xml.in  gif-editor.desktop  gif-recorder.desktop  package.xml.in
.github/workflows/: codeql-analysis.yml  deploy_linux.yml  deploy_mac.yml  deploy_win.yml  obs-trigger.yml
.reuse/: dep5
script/linux/: build.sh  clean.sh  deploy.sh  install-qt.sh
script/macos/: build.sh  clean.sh  deploy.sh  install-qt.sh
script/windows/: build.bat  clean.bat  copy-binaries.bat  copy-openssl.bat  copy-qt.bat  deploy.bat  install-qt.bat
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  about.cpp  about.hpp  busyindicator.cpp  busyindicator.hpp  constants.cpp  constants.hpp  crop.cpp  crop.hpp  delay.cpp  delay.hpp  delay.ui  drawarrow.cpp  drawarrow.hpp  drawrect.cpp  drawrect.hpp  frame.cpp  frame.hpp  frameontape.cpp  frameontape.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow_private.cpp  mainwindow_private.hpp  rectangle.cpp  rectangle.hpp  resources.qrc  settings.cpp  settings.hpp  settings.ui  tape.cpp  tape.hpp  text.cpp  text.hpp  texteditor.cpp  texteditor.hpp  tips.cpp  tips.hpp  uistates.cpp  (+3 more)
src/recorder/: CMakeLists.txt  event_monitor.cpp  event_monitor.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  resources.qrc  settings.cpp  settings.hpp  settings.ui  sizedlg.cpp  sizedlg.hpp  sizedlg.ui
src/shared/: CMakeLists.txt  icon.qrc  license_dialog.cpp  license_dialog.hpp  tr.qrc  utils.cpp  utils.hpp  version.hpp.in
src/shared/icon/: icon.svgz
src/shared/tr/: gif_ru.qm
translate/: gif_ru.ts
